# mcagent

./: .gitignore  Cargo.toml  IDEAS.md  PLAN.md  README.md  install.sh
.mcagent/agents/mcagent/: AGENT.md
.mcagent/agents/reviewers/cto-ai-native/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-distributed-systems/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-dx-advocate/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-enterprise-guardian/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-infrastructure-hardliner/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-legacy-modernizer/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-open-source-idealist/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-scale-pragmatist/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-security-paranoid/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/cto-startup-yolo/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/the-architect/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/the-gatekeeper/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/the-meta-reviewer/: AGENT.md  REVIEW.md
.mcagent/agents/reviewers/the-pedant/: AGENT.md  REVIEW.md
crates/mcagent-core/src/: budget.rs  error.rs  execution.rs  lib.rs  types.rs
crates/mcagent-cowfs/: Cargo.toml
crates/mcagent-cowfs/src/: layer.rs
crates/mcagent-docker/: Cargo.toml
crates/mcagent-docker/src/: backend.rs  lib.rs
crates/mcagent-mcp/src/: server.rs
crates/mcagent-mcp/src/tools/: mod.rs
crates/mcagent-wasi/: Cargo.toml
crates/mcagent-wasi/src/: backend.rs  lib.rs
docker/: .dockerignore  Dockerfile  Dockerfile.install-test  SECRETS.md  docker-compose.yml  test-deploy.sh  test-install.sh
