[workspace]
resolver = "2"
members = [
    "crates/mcagent-core",
    "crates/mcagent-cowfs",
    "crates/mcagent-wasi",
    "crates/mcagent-docker",
    "crates/mcagent-gitbutler",
    "crates/mcagent-mcp",
    "bin/mcagent-server",
]

[workspace.dependencies]
# Internal crates
mcagent-core = { path = "crates/mcagent-core" }
mcagent-cowfs = { path = "crates/mcagent-cowfs" }
mcagent-wasi = { path = "crates/mcagent-wasi" }
mcagent-docker = { path = "crates/mcagent-docker" }
mcagent-gitbutler = { path = "crates/mcagent-gitbutler" }
mcagent-mcp = { path = "crates/mcagent-mcp" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# MCP
rmcp = { version = "1.1", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
schemars = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem
reflink-copy = "0.1"
walkdir = "2"

# WASI runtime
wasmtime = "29"
wasmtime-wasi = "29"
wasmtime-wasi-http = "29"

# WASI tool compilation
toml = "1.0"
sha1 = "0.10"
hex = "0.4"
tempfile = "3"

# WASI preview2 HTTP support
http-body-util = "0.1"
hyper = "1.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs
uuid = { version = "1", features = ["v4"] }
