[package]
name = "mcagent-cowfs"
version = "0.1.0"
edition = "2021"

[dependencies]
mcagent-core = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
